manifests/apps/nerdboard-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nerdboard
  namespace: nerdboard-app
spec:
  selector:
    app: nerdboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
