manifests/apps/nerdboard-app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nerdboard
  namespace: nerdboard-app
spec:
  parentRefs:
    - name: http-gateway
      namespace: gateways-system
  hostnames:
    - nerdboard.imavgs.no
  rules:
    - backendRefs:
        - name: nerdboard
          port: 80
